[package]
name = "proc-mem-to-prom"
version = "0.1.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
hyper = { version = "0.14", features = ["http1", "server", "tcp"] }
lazy_static = "1.4"
procfs = "0.15"
prometheus = "0.13"
tokio = { version = "1", features = ["full"] }
users = "0.11"
